fixed blog styles and alignment

--- a/css/boxes.css
+++ b/css/boxes.css
@@ -136,11 +136,13 @@
 }
 
 .individual-post {
-    background-color: transparent;
+    background-color: rgba(220, 220, 170, .2);
     margin: 5px 0 0 5px;
     padding: 10px;
     font-size: 0.9em;
     text-align: center;
+    border: 1px solid;
+    border-color: rgba(190, 190, 140, .3);;
 }
 
 @media (max-width: 768px) {
